# tropi-storage-adapter

./: .gitignore  LICENSE  README.md  RUNBOOK.md  env.example  pyproject.toml
docs/: usage.md
scripts/: smoke_test_m365.py
tests/: test_adapter_factory.py  test_dropbox_backend.py  test_graph_backend.py  test_graph_routing.py  test_path_utils.py
tropi_storage/: __init__.py  adapter.py  exceptions.py  logging_config.py  path_utils.py  retry.py  routing.py
tropi_storage/backends/: __init__.py  dropbox_backend.py  graph_backend.py
