[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tropi-storage-adapter"
version = "0.1.0"
description = "Unified storage adapter exposing a single interface over Dropbox and Microsoft 365 (SharePoint via Graph) backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Storage Adapter Contributors" }]
keywords = ["dropbox", "sharepoint", "graph", "storage", "adapter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dropbox==12.0.2",
    "httpx>=0.27,<1.0",
    "msal>=1.28,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk>=2.0,<3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "sentry-sdk>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/your-org/tropi-storage-adapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["tropi_storage*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
